wsdf/tests/should_fail/invalid_get_variant.stderr
error: this field cannot be used to dispatch enums
 --> tests/should_fail/dispatch_based_on_struct.rs:9:5
  |
9 |     bar: Bar,
  |     ^^^

warning: unused variable: `bar`
  --> tests/should_fail/dispatch_based_on_struct.rs:24:21
   |
24 |     fn dispatch_bar(bar: &Bar) -> usize {
   |                     ^^^ help: if this is intentional, prefix it with an underscore: `_bar`
   |
   = note: `#[warn(unused_variables)]` on by default
